# Claude-LTM

./: .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  FAQ.md  LICENSE  PERFORMANCE.md  README.md  SETUP.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
commands/: detect-achievements.md  forget.md  memories.md  memory-export.md  memory-graph.md  memory-import.md  memory-stats.md  please-remember.md  recall.md  refresh-memories.md  sign-memories.md
ltm/: __init__.py  cli.py
ltm/commands/: __init__.py  base.py  export_memories.py  forget.py  graph.py  import_memories.py  memories.py  recall.py  remember.py  stats.py
ltm/core/: __init__.py  agent.py  config.py  limits.py  memory.py  signing.py  types.py
ltm/hooks/: __init__.py  session_end.py  session_start.py
ltm/lifecycle/: __init__.py  decay.py  injection.py
ltm/storage/: __init__.py  protocol.py  schema.sql  sqlite.py
ltm/tools/: __init__.py  detect_achievements.py  import_seeds.py  keygen.py  setup.py  sign_memories.py
scripts/: profile_storage_injection.py
seeds/: ACHIEVEMENTS_001.md  ARCHITECTURAL_001.md  EMOTIONAL_001.md  EMOTIONAL_002.md  LEARNINGS_001.md  README.md  STARTER_001.md  STARTER_002.md
tests/: README_TIME_TRAVEL.md  __init__.py  conftest.py  test_commands.py  test_config.py  test_core_models.py  test_decay.py  test_detect_achievements.py  test_hooks.py  test_import_seeds.py  test_integration.py  test_keygen.py  test_limits.py  test_performance.py  test_session_end.py  test_sign_memories.py  test_signing.py  test_storage.py  test_time_travel.py
(+1 files in other folders)
